WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
186303
[iOS] TestWebKitAPI.WebKit.WKHTTPCookieStoreWithoutProcessPool fails because cookies aren't flushed to file
https://bugs.webkit.org/show_bug.cgi?id=186303
Summary
[iOS] TestWebKitAPI.WebKit.WKHTTPCookieStoreWithoutProcessPool fails because ...
Sihui Liu
Reported
2018-06-04 23:23:41 PDT
Here is the failure output now: TestWebKitAPI.WebKit.WKHTTPCookieStoreWithoutProcessPool /Volumes/Data/slave/ios-simulator-11-release/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/WKHTTPCookieStore.mm:471 Value of: message.UTF8String Actual: "SessionCookieName=CookieValue" Expected: "PersistentCookieName=CookieValue; SessionCookieName=CookieValue"
https://build.webkit.org/builders/Apple%20iOS%2011%20Simulator%20Release%20WK2%20%28Tests%29/builds/5348/steps/run-api-tests/logs/stdio
Attachments
Patch
(3.78 KB, patch)
2018-06-04 23:31 PDT
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sihui Liu
Comment 1
2018-06-04 23:24:23 PDT
<
rdar://problem/40468716
>
Sihui Liu
Comment 2
2018-06-04 23:31:41 PDT
Created
attachment 341956
[details]
Patch
Geoffrey Garen
Comment 3
2018-06-05 14:43:38 PDT
Comment on
attachment 341956
[details]
Patch r=me
WebKit Commit Bot
Comment 4
2018-06-05 15:09:53 PDT
Comment on
attachment 341956
[details]
Patch Clearing flags on attachment: 341956 Committed
r232522
: <
https://trac.webkit.org/changeset/232522
>
WebKit Commit Bot
Comment 5
2018-06-05 15:09:55 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug