[iOS] TestWebKitAPI.WebKit.WKHTTPCookieStoreWithoutProcessPool fails because cookies aren't flushed to file https://bugs.webkit.org/show_bug.cgi?id=186303 <rdar://problem/40468716>

Reviewed by Geoffrey Garen.

No matter there is an observer or not, cookies in UI process should always be flushed to
file when new process pool is created, such that cookies created via API can be synced to
network process.

* UIProcess/API/APIHTTPCookieStore.cpp:
(API::HTTPCookieStore::HTTPCookieStore):
(API::HTTPCookieStore::registerObserver):
(API::HTTPCookieStore::cookieManagerDestroyed):
(API::HTTPCookieStore::registerForNewProcessPoolNotifications):


Canonical link: https://commits.webkit.org/201703@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232522 268f45cc-cd09-0410-ab3c-d52691b4dbfc